Images Stretching Bug Fixed.

--- a/index.css
+++ b/index.css
@@ -138,7 +138,8 @@ img:hover{
 
 
 .product-card > img {
-  width: 100%;
+  align-self: center;
+  width: max-content;
   height: 50%;
 }
 
